fixing home video to fit the layout on mobile

--- a/app/assets/stylesheets/pages/_talents.scss
+++ b/app/assets/stylesheets/pages/_talents.scss
@@ -245,7 +245,7 @@ section.talent {
 //////////////// RESPONSIVE ipad ////////////////////
 
 /*Medium devices (tablets, 768px and up)*/
-@media (min-width: 801px) and (max-width: 1124px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   section.talents {
 
       &:nth-child(1) {
@@ -490,7 +490,7 @@ section.talent {
 }
 
 /*Small devices (landscape phones, 576px and up)*/
-@media (min-width: 426px) and (max-width: 800px) {
+@media (min-width: 426px) and (max-width: 767px) {
   section.talents {
 
       &:nth-child(1) {
